fix(ui): Remove pagination and horizontal scroll bars on Overview page (#652)
* Remove pagination and horizontal scroll bars, Replace other destinations icon.

* Icon fixes

* Update NavBar snapshot

* Fixes destinations icon in the navbar

--- a/ui/src/components/NavBar/nav-bar.module.scss
+++ b/ui/src/components/NavBar/nav-bar.module.scss
@@ -45,11 +45,15 @@ $bg-color-transition: background-color 0.2s ease;
     display: inline-block;
     width: 1.125rem;
     height: 1.125rem;
-    color: #2f2f31;
+    color: #ffffff;
     stroke: #ffffff;
     &.active {
       stroke: colors.$revolver;
+      fill: colors.$revolver;
     }
+  }
+  .destination-icon {
+    width: 1.7rem;
   }
 
   &:hover {
